--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "cypress": "cypress open"
+    "cy:open": "cypress open"
   },
   "dependencies": {
     "cypress": "^13.13.0"
